resources/css/style.css
/* Universal Styles */

html {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
}

.main-content {
  position: relative;
  margin: 0;
  top: 5.3125rem; /* To offset for fixed header. */
}

.main-content .banner {
  width: 100%;
  background-image: url("/resources/images/banner-landingpage.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.center {
  text-align: center;
}

.button {
  border-radius: 4px;
  background-color: #4a4a4a;
  color: white;
}

.image-container {
  overflow: hidden;
}

.image-container img {
  display: block;
  width: 100%;
  height: 100%;
}

@media only screen and (max-width: 760px) {
  .main-content {
    top: 2.5625rem;
  }
}

/* Header */

header {
  position: fixed;
  width: 100%;
  border-bottom: solid 1px #c6c1c1;
  background-color: white;
  z-index: 10;
}

header .content {
  display: flex;
  align-items: center;
  padding: 1.875rem;
}

header .logo {
  flex: 1;
  color: #4a4a4a;
  font-size: 1.5rem;
  font-family: 'Roboto';
}

header nav ul {
  display: flex;
}

nav li {
  padding-left: 3.5rem;
}

nav a {
  vertical-align: bottom;
  line-height: 1.6;
  font-size: 1rem;
  color: #4a4a4a;
  line-height: 1.6;
  font-family: 'Roboto';
}

header .icon {
  width: 1rem;
  padding-left: .75rem;
  height: auto;
}

header .mobile {
  display: none;
}

header .desktop .button {
  padding: .1875rem .5rem;
  background-color: #9dc20b;
  line-height: 1.6;
  color: white;
}

@media only screen and (min-width: 1024px) {
  header .desktop .button {
    display: none;
  }
}

@media only screen and (max-width: 720px) {
  header .desktop {
    display: none;
  }

  header .mobile {
    display: block;
    width: 100%;
  }

  header .content {
    padding: .5rem 0;
  }

  header .mobile ul {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
  }

  header .mobile li {
    padding: 0;
  }

  header .mobile .button {
    padding: .1875rem .5rem;
    background-color: #9dc20b;
    line-height: 1.6;
    color: white;
  }
}

@media screen and (max-width: 480px) {
  html {
    border: 3px solid red;
  }
}

/* Sign Up Section */
#sign-up-section {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  height: 43.5rem;
}

#sign-up-cta {
  padding: 0 5rem 2.5rem 5rem;
  border: solid 1px #979797;
  border-radius: 4px;
  background-color: #9dc20b;
  margin-top: 10.625rem;
  margin-left: 6.25rem;
  margin-bottom: 10.625rem;
  transition-property: background-color;
  transition-duration: 1s;
  transition-timing-function: ease-in-out;
}

#sign-up-cta .content {
  width: 25.625rem;
  margin-top: 2rem;
  font-family: "Roboto", sans-serif;
  font-size: 1.25rem;
  line-height: 1.4;
  color: white;
}

#sign-up-cta h1 {
  font-size: 3.125rem;
}

#sign-up-cta h2 {
  font-size: 2.25rem;
}

#sign-up-cta span {
  font-size: 1.25rem;
  font-family: "Roboto";
  line-height: 1.4;
  color: white;
}

#sign-up-cta span strong {
  font-weight: bold;
}

#sign-up-cta .cursive {
  font-family: "Damion", cursive;
}

#sign-up-cta .striking {
  font-family: "Rubik", sans-serif;
  padding-bottom: .75rem;
}

#sign-up-cta .button {
  margin-top: 1.625rem;
  padding: 1.25rem 7.25rem;
}

@media only screen and (max-width: 780px) {
  #sign-up-section {
    align-items: center;
    justify-content: center;
    height: 28rem;
  }

  #sign-up-cta {
    position: static;
    width: 100%;
    height: auto;
    background-color: transparent;
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: none;
  }

  #sign-up-cta .content {
    margin-top: 0;
  }

  #sign-up-cta .email {
    display: none;
  }

  #sign-up-cta h1 {
    font-size: 3.125rem;
  }

  #sign-up-cta h2 {
    font-size: 2.25rem;
  }
}

@media only screen and (max-width: 480px) {
  .main-content {
    margin: 0;
    width: 100%;
  }

  #sign-up-section {
    height: 20rem;
  }

  #sign-up-cta h1 {
    font-size: 2.25rem;
  }

  #sign-up-cta h2 {
    font-size: 2rem;
  }
}

/* Features Section */

#features-section {
  display: flex;
  flex-wrap: wrap;
  height: auto;
  justify-content: space-between;
  padding-top: 4rem;
  padding-bottom: 2.875rem;
  background-color: #f3f3f3;
  flex-direction: row;
}

.feature {
  flex: 1;
  padding: 2rem;
  width: 0;
  margin: 0px 1.25rem;
  background-color: white;
  height: auto;
  gap: 38px;
}

.feature .content{
  padding-top: 40px;
  height: 187px;
}

.feature .image-container {
  width: 90%;
  height: 65%;
  margin: 0 auto;
}

.feature h2 {
  padding-bottom: .5rem;
  font-size: 2.25rem;
  font-weight: bold;
  color: #4a4a4a;
  font-family: "Roboto";
}

.feature h3 {
  font-size: 1rem;
  line-height: 1.2;
  font-weight: 300;
  color: #4a4a4a;
}

@media only screen and (max-width: 768px) {
  .feature h2 {
    text-align: left;
  }

  .feature h3 {
    text-align: left;
  }
}

@media only screen and (max-width: 480px) {
  #features-section {
    display: flex;
    flex-flow: column;
    padding: 0;
  }

  .feature {
    margin: 0;
    width: auto;
    padding: 1.25rem 1rem 1.25rem 1rem;
    height: auto;
  }

  .feature .content {
    height: auto;
  }

  .feature h2 {
    text-align: center;
    font-size: 1.5rem;
    font-weight: normal;
  }

  .feature h3 {
    text-align: center;
    font-size: 14px;
    line-height: 1.4;
  }
}

/* Filters Section */

#filters-section {
  padding: 4rem 0;
  background-color: #4a4a4a;
}

#filters-section .content {
  padding: 0 .625rem;
  margin-bottom: 5rem;
}

#filters-section .content h2 {
  font-size: 2.25rem;
  font-weight: bold;
  color: white;
}

#filters-section .content h3 {
  font-size: 1rem;
  line-height: 1.4;
  font-weight: 300;
  color: white;
}

#filters-section .images-container {
  display: flex;
  flex-direction: row;
  max-width: 100%;
  padding: 0 1%;
}

@media only screen and (max-width: 768px) {
  #filters-section {
    padding: 1.5rem 0 0 0;
  }

  #filters-section .content {
    margin-bottom: 1rem;
  }

  #filters-section .content h2 {
    padding-bottom: .625rem;
    font-size: 1.125rem;
    line-height: 1.3;
    font-weight: normal;
  }

  #filters-section .content h3 {
    font-size: .875rem;
    line-height: 1.4;
  }

  #filters-section .images-container {
    padding: 0;
    width: 100%;
  }
}

@media only screen and (max-width: 480px){
  #filters-section .images-container .extra {
    display: none;
  }
}
/* Quotes Section */

#quotes-section {
  background-color: #f3f3f3;
}

#quotes-section .content {
  padding: 5rem 0;
}

#quotes-section .quote {
  padding-right: 1.875rem;
  font-family: "Palatino", serif;
  font-size: 1.875rem;
  line-height: 1.1;
  font-style: italic;
  color: #4a4a4a;
}

#quotes-section .quote-citation {
  height: 1.875rem;
}

@media only screen and (max-width: 768px) {
  #quotes-section .content {
    padding: 1.875rem .625rem;
    display: flex;
    align-self: center;
  }

  #quotes-section .quote {
    font-size: 1.75rem;
    line-height: 1.4;
    text-align: left;
    padding-left: 3rem;
  }

  #quotes-section .quote-citation {
    display: block;
    margin: auto;
    padding-right: 3rem;
  }
}

@media only screen and (max-width: 480px){
  #quotes-section .content {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  #quotes-section .quote {
    text-align: center;
    font-size: 1.75rem;
  }
}

/* Footer */

footer {
  background-color: #9b9b9b;
  padding: 1.5rem 2rem;
}

footer .content {
  color: white;
  display: flex;
  font-size: .75rem;
}

footer .copyright {
  flex-grow: 1;
  font-size: 12px;
  font-family: "Roboto";
}

footer .location {
  font-size: 12px;
  font-family: "Roboto";
}

@media only screen and (max-width: 768px) {
  footer .content {
    font-size: .625rem;
  }
}

@media only screen and (max-width: 480px) {
  footer .content {
    font-size: 10px;
  }
}

